# SurfaceEvolverGUI

./: Advice.txt  CMakeLists.txt  CopyPasta.txt  Engine.cpp  Engine.h  MeshObject.cpp  MeshObject.h  README.md  SurfaceEvolverGUI.cxx  SurfaceEvolverGUI.h  SurfaceEvolverGUI.ui  SurfaceEvolverGUIDriver.cxx  UiOverrides.txt
EvolutionCore/RemeshingCore/: Evolver.h
models/: MaxPlanck.vtk  arc2.vtk  bunnyMarchingCubes.vtk
src/: AABBTree.cpp  AABBTree.h  CMakeLists.txt  CubeSphere.h  Deform.h  Engine.cpp  Engine.h  EvolutionRemesher.h  EvolutionWidget.cpp  EvolutionWidget.h  EvolutionWidget.ui  Evolver.cpp  Evolver.h  FastSweep3D.h  Geometry.h  Grid.cpp  Grid.h  Icosphere.cpp  Icosphere.h  LinearSolver.cpp  MeshObject.cpp  MeshObject.h  Octree.h  Parameters.h  PrimitiveBox.h  SDF.cpp  SDF.h  SDFWidget.cpp  SDFWidget.h  SDFWidget.ui  SceneObject.cpp  SceneObject.h  SurfaceEvolverGUI.cpp  SurfaceEvolverGUI.h  SurfaceEvolverGUI.ui  VTKExporter.h
